# protonmail-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/proton-core/: Cargo.toml
crates/proton-core/src/: cache.rs  error.rs  html.rs  lib.rs
crates/proton-core/src/api/: attachments.rs  contacts.rs  conversations.rs  events.rs  filters.rs  keys.rs  labels.rs  messages.rs  mod.rs  settings.rs
crates/proton-core/src/auth/: mod.rs  types.rs
crates/proton-core/src/crypto/: kdf.rs  keys.rs  message.rs  mod.rs
crates/proton-core/src/mail/: attachments.rs  contacts.rs  drafts.rs  export.rs  filters.rs  mod.rs  organize.rs  read.rs  send.rs  sync.rs
crates/proton-core/src/model/: conversation.rs  enums.rs  label.rs  message.rs  mod.rs
crates/proton-core/src/session/: mod.rs  secret_store.rs
crates/proton-core/src/transport/: headers.rs  mod.rs  retry.rs
crates/proton-core/tests/: api_wiremock.rs  live.rs
crates/proton-mcp/: Cargo.toml
crates/proton-mcp/src/: common.rs  main.rs  server.rs
crates/proton-mcp/src/tools/: apply_label.rs  cancel_scheduled_send.rs  check_filter.rs  counts.rs  create_filter.rs  create_label.rs  delete_draft.rs  delete_filter.rs  delete_label.rs  delete_messages.rs  disable_filter.rs  download_attachment.rs  empty_folder.rs  enable_filter.rs  forward_message.rs  get_settings.rs  index_cache.rs  list_addresses.rs  list_attachments.rs  list_contact_emails.rs  list_contacts.rs  list_conversations.rs  list_drafts.rs  list_filters.rs  list_labels.rs  list_messages.rs  mark_conversation.rs  mark_read.rs  mod.rs  move_conversation.rs  move_message.rs  read_conversation.rs  read_message.rs  remove_label.rs  reply_message.rs  report_ham.rs  report_spam.rs  save_draft.rs  search_conversations.rs  search_local.rs  (+17 more)
crates/protonmail-cli/: Cargo.toml
crates/protonmail-cli/src/: cli.rs  hv.rs  main.rs  render.rs
crates/protonmail-cli/src/commands/: attachments.rs  auth.rs  contacts.rs  conversations.rs  drafts.rs  export.rs  filters.rs  labels.rs  messages.rs  mod.rs  search.rs  sync.rs  watch.rs
docs/: CLI.md
scripts/: gen-cli-docs.sh
