[workspace]
resolver = "2"
members = ["crates/proton-core", "crates/protonmail-cli", "crates/proton-mcp"]

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "MIT"
authors = ["Filippo Finke <filippofinke@protonmail.ch>"]
rust-version = "1.96"
repository = "https://github.com/filippofinke/protonmail-rs"
homepage = "https://github.com/filippofinke/protonmail-rs"
readme = "README.md"
keywords = ["proton", "protonmail", "email", "openpgp", "mcp"]
categories = ["email", "command-line-utilities", "api-bindings"]

[workspace.dependencies]
proton-crypto = { version = "0.12", default-features = false, features = ["rustpgp"] }
proton-srp = "0.8"
rmcp = { version = "2", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
keyring = "4"
mail-parser = "0.11"
mail-builder = "0.4"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
secrecy = "0.10"
zeroize = "1"
chrono = "0.4"
futures = "0.3"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
ammonia = "4"

[workspace.dependencies.wiremock]
version = "0.6"
