[package]
name = "proton-core"
description = "Unofficial pure-Rust Proton Mail SDK: SRP authentication, OpenPGP end-to-end crypto, and the mail API (transport, send/read, drafts, filters, contacts, local encrypted search)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["email", "api-bindings", "authentication"]

[dependencies]
proton-crypto.workspace = true
proton-srp.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring.workspace = true
mail-parser.workspace = true
mail-builder.workspace = true
thiserror.workspace = true
base64.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
secrecy.workspace = true
zeroize.workspace = true
chrono.workspace = true
futures.workspace = true
urlencoding.workspace = true
rusqlite.workspace = true
ammonia.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
