[package]
name = "proton-mcp"
description = "Model Context Protocol (MCP) server exposing Proton Mail to LLM agents, backed by proton-core and a protonmail-cli login session."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["email", "command-line-utilities"]

[[bin]]
name = "proton-mcp"
path = "src/main.rs"

[dependencies]
proton-core = { path = "../proton-core", version = "0.1.0" }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum = "0.8"
